11 September 2019: Wouter
	- Use explicit bzero for wiping clear buffer of hash in cachedb,
	  reported by Eric Sesterhenn from X41 D-Sec.

9 September 2019: Wouter
	- Fix #72: configure --with-syslog-facility=LOCAL0-7 with default
	  LOG_DAEMON (as before) can set the syslog facility that the server
	  uses to log messages.

4 September 2019: Wouter
	- Fix #71: fix openssl error squelch commit compilation error.

3 September 2019: Wouter
	- squelch DNS over TLS errors 'ssl handshake failed crypto error'
	  on low verbosity, they show on verbosity 3 (query details), because
	  there is a high volume and the operator cannot do anything for the
	  remote failure.  Specifically filters the high volume errors.

2 September 2019: Wouter
	- ipset module #28: log that an address is added, when verbosity high.
	- ipset: refactor long routine into three smaller ones.
	- updated Makefile dependencies.

23 August 2019: Wouter
	- Fix contrib/fastrpz.patch asprintf return value checks.

22 August 2019: Wouter
	- Fix that pkg-config is setup before --enable-systemd needs it.
	- 1.9.3rc2 release candidate tag.  And this became the 1.9.3 release.
	  Master is 1.9.4 in development.

21 August 2019: Wouter
	- Fix log_dns_msg to log irrespective of minimal responses config.

19 August 2019: Ralph
	- Document limitation of pidfile removal outside of chroot directory.

16 August 2019: Wouter
	- Fix unittest valgrind false positive uninitialised value report,
	  where if gcc 9.1.1 uses -O2 (but not -O1) then valgrind 3.15.0
	  issues an uninitialised value for the token buffer at the str2wire.c
	  rrinternal_get_owner() strcmp with the '@' value.  Rewritten to use
	  straight character comparisons removes the false positive.  Also
	  valgrinds --expensive-definedness-checks=yes can stop this false
	  positive.
	- Please doxygen's parser for "@" occurrence in doxygen comment.
	- Fixup contrib/fastrpz.patch
	- Remove warning about unknown cast-function-type warning pragma.
