@@ -1,3 +1,6 @@
+19 September 2019: Wouter
+	- Fix #78: Memory leak in outside_network.c.
+
 11 September 2019: Wouter
 	- Use explicit bzero for wiping clear buffer of hash in cachedb,
 	  reported by Eric Sesterhenn from X41 D-Sec.
